<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="pl.wierzejski_adrian.wyswietlaczprasa.MainActivity"
    tools:showIn="@layout/activity_main">

    <ProgressBar
        android:id="@+id/progressBar_lewa"
        style="@style/Widget.ProgressBar.Vertical2"
        android:layout_width="38dp"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="144dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:max="1023"
        app:layout_constraintBottom_toTopOf="@+id/textView_lewa"
        app:layout_constraintEnd_toStartOf="@+id/textView9"
        app:layout_constraintHorizontal_bias="0.05"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5"
        app:layout_constraintVertical_bias="0.0" />

    <ProgressBar
        android:id="@+id/progressBar_prawa"
        style="@style/Widget.ProgressBar.Vertical2"
        android:layout_width="38dp"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="76dp"
        android:layout_marginStart="8dp"
        android:max="1023"
        app:layout_constraintBottom_toTopOf="@+id/textView_lewa"
        app:layout_constraintEnd_toStartOf="@+id/textView9"
        app:layout_constraintStart_toEndOf="@+id/progressBar_lewa"
        app:layout_constraintTop_toTopOf="@+id/progressBar_lewa"
        app:layout_constraintVertical_bias="1.0" />

    <ProgressBar
        android:id="@+id/progressBar_srodek"
        style="@style/Widget.ProgressBar.Vertical2"
        android:layout_width="38dp"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:max="1023"
        app:layout_constraintBottom_toTopOf="@+id/textView_lewa"
        app:layout_constraintEnd_toStartOf="@+id/textView9"
        app:layout_constraintStart_toEndOf="@+id/progressBar_prawa"
        app:layout_constraintTop_toTopOf="@+id/progressBar_lewa"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textView_lewa"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="60dp"
        android:text="1023"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/progressBar_lewa" />

    <TextView
        android:id="@+id/textView_prawa"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="1023"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/textView_lewa"
        app:layout_constraintStart_toStartOf="@+id/progressBar_prawa" />

    <TextView
        android:id="@+id/textView_srodek"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="1023"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/textView_lewa"
        app:layout_constraintStart_toStartOf="@+id/progressBar_srodek" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/text_left"
        app:layout_constraintStart_toStartOf="@+id/progressBar_lewa"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_right"
        app:layout_constraintStart_toStartOf="@+id/progressBar_prawa"
        app:layout_constraintTop_toTopOf="@+id/textView5" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_middle"
        app:layout_constraintStart_toStartOf="@+id/progressBar_srodek"
        app:layout_constraintTop_toTopOf="@+id/textView5" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:text="@string/text_sensor_klapa"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.95"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textView5" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:text="@string/text_sensor_przod"
        app:layout_constraintEnd_toStartOf="@+id/textView10"
        app:layout_constraintTop_toTopOf="@+id/textView10" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/text_sensor_tyl"
        app:layout_constraintEnd_toEndOf="@+id/textView8"
        app:layout_constraintTop_toBottomOf="@+id/checkBox_klapa" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/text_liczba_bel"
        app:layout_constraintEnd_toEndOf="@+id/textView8"
        app:layout_constraintTop_toBottomOf="@+id/checkBox_tyl" />

    <TextView
        android:id="@+id/textView_liczba_bel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="14"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="@+id/textView8"
        app:layout_constraintTop_toBottomOf="@+id/textView12" />

    <Button
        android:id="@+id/button_reset"
        style="@android:style/Widget.Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="@android:color/holo_blue_dark"
        android:text="@string/action_reset_counter"
        android:textColor="@android:color/background_light"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/button_polacz"
        app:layout_constraintEnd_toStartOf="@+id/textView_liczba_bel"
        app:layout_constraintHorizontal_bias="0.85"
        app:layout_constraintStart_toEndOf="@+id/textView_srodek"
        app:layout_constraintTop_toBottomOf="@+id/textView_liczba_bel"
        app:layout_constraintVertical_bias="0.20999998" />

    <Button
        android:id="@+id/button_polacz"
        style="@android:style/Widget.Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:background="@android:color/holo_blue_dark"
        android:text="@string/action_connect"
        android:textColor="@android:color/background_light"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/textView_lewa"
        app:layout_constraintEnd_toEndOf="@+id/textView8"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/textView_srodek" />

    <CheckBox
        android:id="@+id/checkBox_przod"
        android:clickable="false"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="@+id/textView9"
        app:layout_constraintTop_toBottomOf="@+id/textView9" />

    <CheckBox
        android:id="@+id/checkBox_tyl"
        android:clickable="false"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="@+id/textView8"
        app:layout_constraintTop_toBottomOf="@+id/textView10" />

    <CheckBox
        android:id="@+id/checkBox_klapa"
        android:clickable="false"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="@+id/textView8"
        app:layout_constraintTop_toBottomOf="@+id/textView8" />

    <TextView
        android:id="@+id/textView_log"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="TextView"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_lewa" />

</android.support.constraint.ConstraintLayout>
